In-progress wiring up the geocoding and onecall fetches to the search input

--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
         <nav class="card cell medium-3">
             <form class="card-header">
                 <label>
-                    City
-                    <input type="text" placeholder="Portland, OR" />
+                    City, State, Country
+                    <input id="search-input" type="text" placeholder="Portland, OR, USA" />
                 </label>
-                <!-- <button type="button" class="button">Search</button> -->
+                <button class="button">Search</button>
             </form>
             <section id="saved-cities" class="hide-for-small-only">
                 <button type="button" class="button expanded secondary">Austin</button>
