In progress: working on page initialization and button display

--- a/index.html
+++ b/index.html
@@ -22,11 +22,7 @@
                 </label>
                 <button class="button">Search</button>
             </form>
-            <section id="saved-cities" class="hide-for-small-only">
-                <button type="button" class="button expanded secondary">Austin</button>
-                <button type="button" class="button expanded secondary">Chicago</button>
-                <button type="button" class="button expanded secondary">New York</button>
-            </section>
+            <section id="saved-cities" class="hide-for-small-only"></section>
         </nav>
         <main class="card cell medium-9 grid-y grid-padding-y grid-padding-x">
             <section id="today" class="cell">
