Wired up display city buttons correctly

--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Weather Dashboard</title>
-    <link rel="stylesheet" href="https://code.jquery.com/ui/1.13.0/themes/base/jquery-ui.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/foundation-sites@6.7.4/dist/css/foundation.min.css" crossorigin="anonymous">
     <link rel="stylesheet" href="./assets/css/style.css">
 </head>
@@ -25,58 +24,15 @@
             <section id="saved-cities" class="hide-for-small-only"></section>
         </nav>
         <main class="card cell medium-9 grid-y grid-padding-y grid-padding-x">
-            <section id="today" class="cell">
-                <h3>Atlanta (3/30/2021) <img /></h3>
-                <div>Temp: </div>
-                <div>Wind: </div>
-                <div>Humidity: </div>
-                <div>UV Index: </div>
-            </section>
+            <section id="today" class="cell"></section>
             
             <h6 class="cell">Five Day Forecast</h6>
-            <section id="forecast" class="cell grid-x grid-padding-x grid-padding-y ">
-                <div class="cell card small-12 medium-auto">
-                    <div>3/31/2021</div>
-                    <div><img /></div>
-                    <div>Temp</div>
-                    <div>Wind</div>
-                    <div>Humidity</div>
-                </div>
-                <div class="cell card small-12 medium-auto">
-                    <div>4/1/2021</div>
-                    <div><img /></div>
-                    <div>Temp</div>
-                    <div>Wind</div>
-                    <div>Humidity</div>
-                </div>
-                <div class="cell card small-12 medium-auto">
-                    <div>4/2/2021</div>
-                    <div><img /></div>
-                    <div>Temp</div>
-                    <div>Wind</div>
-                    <div>Humidity</div>
-                </div>
-                <div class="cell card small-12 medium-auto">
-                    <div>4/3/2021</div>
-                    <div><img /></div>
-                    <div>Temp</div>
-                    <div>Wind</div>
-                    <div>Humidity</div>
-                </div>
-                <div class="cell card small-12 medium-auto">
-                    <div>4/4/2021</div>
-                    <div><img /></div>
-                    <div>Temp</div>
-                    <div>Wind</div>
-                    <div>Humidity</div>
-                </div>
-            </section>
+            <section id="forecast" class="cell grid-x grid-padding-x grid-padding-y "></section>
         </main>
     </div>
     
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.1/moment.min.js" integrity="sha512-qTXRIMyZIFb8iQcfjXWCO8+M5Tbc38Qi5WzdPOYZHIlZpzBHG3L3by84BBBOiRGiEb7KKtAOAs5qYdUiZiQNNQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
-    <script src="https://code.jquery.com/ui/1.13.0/jquery-ui.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/foundation-sites@6.7.4/dist/js/foundation.min.js" crossorigin="anonymous"></script>
     <script src="./assets/js/script.js"></script>
 </body>
